# webcamit

./: .gitignore  .gitmodules  CMakeLists.txt  DUMP  Makefile  README.md  main.c  s.c  scripts.sh  v4l2.c  v4l2.sh
src/: libpict.c  main.c  s.c  scripts.sh  ui.c  usb.c  users.c  v4l2.c  wcit.h
